Fix misc errors such as missing imports